Hide the Topics block when no topic is describeed

--- a/templates/html/.partials/topics.html
+++ b/templates/html/.partials/topics.html
@@ -1,4 +1,6 @@
+{{#if asyncapi.topics}}
 <h2 class="section-header">Topics</h2>
+{{/if}}
 
 {{#each asyncapi.topics}}
   {{~>topic topic=. topicName=@key ~}}
