--- a/templates/html/.partials/schema.html
+++ b/templates/html/.partials/schema.html
@@ -4,6 +4,25 @@
   <h4>{{schemaName}}</h4>
   {{/unless}}
 
+  {{#if schema.items.length}}
+  <table class="table">
+    <thead class="table__head">
+      <tr class="table__head__row">
+        <th class="table__head__cell">Index</th>
+        <th class="table__head__cell">Title</th>
+        <th class="table__head__cell">Type</th>
+        <th class="table__head__cell">Format</th>
+        <th class="table__head__cell">Default</th>
+        <th class="table__head__cell">Description</th>
+      </tr>
+    </thead>
+    <tbody class="table__body">
+      {{#each schema.items}}
+        {{> schemaProp prop=. propName=@index required=true}}
+      {{/each}}
+    </tbody>
+  </table>
+  {{else}}
   <table class="table">
     <thead class="table__head">
       <tr class="table__head__row">
@@ -23,6 +42,7 @@
       {{/each}}
     </tbody>
   </table>
+  {{/if}}
 
 {{#if schema.example}}
 <h4>Example</h4>
