--- a/templates/html/.partials/content.html
+++ b/templates/html/.partials/content.html
@@ -1,7 +1,7 @@
 {{> info}}
 {{> security}}
-{{#if asyncapi.topics}}
-{{~> topics ~}}
+{{#if asyncapi.channels}}
+{{~> channels ~}}
 {{/if}}
 {{> messages}}
 {{> schemas}}
