--- a/templates/html/.partials/parameters.html
+++ b/templates/html/.partials/parameters.html
@@ -1,7 +1,7 @@
 <a name="parameters-{{topicName}}"></a>
 <div class="parameters">
   {{#unless hideTitle}}
-  <h4>Topic Parameters</h4>
+  <h4>Channel Parameters</h4>
   {{/unless}}
 
   {{#each params as |param|}}
