Improve HTML template

--- a/templates/html/.partials/content.html
+++ b/templates/html/.partials/content.html
@@ -1,7 +1,5 @@
-{{> info}}
-{{> security}}
+{{> introduction}}
+{{> servers}}
 {{#if asyncapi.channels}}
-{{~> channels ~}}
+{{~> operations ~}}
 {{/if}}
-{{> messages}}
-{{> schemas}}
