--- a/templates/html/.partials/operation.html
+++ b/templates/html/.partials/operation.html
@@ -14,9 +14,11 @@
   <div class="mt-4 mb-4 markdown">{{{operation.descriptionAsHTML}}}</div>
 
   {{#if operation.message.payload}}
-    <p class="text-grey text-sm">{{operation.message.summary}}</p>
-    <div class="mt-4 mb-4 markdown">{{{operation.message.descriptionAsHTML}}}</div>
-    {{>schema schema=operation.message.payload schemaName=Payload}}
+    <div class="bg-grey-lighter rounded p-4 mt-2">
+      <p class="text-grey-dark text-sm">{{operation.message.summary}}</p>
+      <div class="mt-4 mb-4 markdown">{{{operation.message.descriptionAsHTML}}}</div>
+      {{>schema schema=operation.message.payload schemaName='Payload'}}
+    </div>
   {{/if}}
 
   {{#if operation.message.oneOf}}
