--- a/templates/html/.partials/schema.html
+++ b/templates/html/.partials/schema.html
@@ -1,3 +1,3 @@
 <div>
-  {{>schemaProp prop=schema propName=schemaName root=true open=true odd=(true)}}
+  {{>schemaProp prop=schema propName=schemaName root=true open=open odd=true}}
 </div>
