--- a/templates/html/.partials/operations.html
+++ b/templates/html/.partials/operations.html
@@ -1,13 +1,13 @@
 <a name="operations"></a>
-<div class="w-3/5 p-8">
-  <h2 class="mb-4">Operations</h2>
+<h2 class="mb-4 ml-8">Operations</h2>
 
-  {{#each asyncapi.channels as |channel channelName|}}
+{{#each asyncapi.channels as |channel channelName|}}
+  <div class="flex">
     {{#if channel.publish}}
       {{~>operation operation=channel.publish operationName='publish' channelName=channelName ~}}
     {{/if}}
     {{#if channel.subscribe}}
       {{~>operation operation=channel.subscribe operationName='subscribe' channelName=channelName ~}}
     {{/if}}
-  {{/each}}
-</div>
+  </div>
+{{/each}}
