--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="relative flex">
-    <div class="fixed pin-t pin-l pin-b w-64 bg-grey-lighter font-sans pt-8 pr-4 pb-4 pl-4">
+    <div class="fixed pin-t pin-l pin-b w-64 bg-grey-lighter font-sans pt-8 pr-4 pb-4 pl-4 sm:hidden md:hidden lg:hidden xl:block">
       {{#if asyncapi.info.x-logo}}
       <img src="{{asyncapi.info.x-logo}}" alt="{{asyncapi.info.title}} logo">
       {{else}}
@@ -64,48 +64,12 @@
       </ul>
       {{/if}}
     </div>
-    <div class="flex-1 leading-loose" style="margin-left: 256px;">
+    <div class="flex-1 leading-loose z-10" style="margin-left: 256px;">
       {{~> content ~}}
     </div>
-    <div class="absolute pin-t pin-r pin-b" style="background-color: #263238;width:calc((100% - 256px) * 0.4);">
-
-    </div>
+    <div class="absolute pin-t pin-r pin-b sm:hidden md:hidden lg:block xl:block" style="background-color: #263238;width:calc((100% - 256px) * 0.4);"></div>
   </div>
   <script src="js/highlight.min.js" type="application/javascript"></script>
   <script src="js/main.js" type="application/javascript"></script>
-  <script type="application/javascript">
-    function removeCurrentLinkSelection () {
-      var links = document.querySelectorAll('.navigation__list__item-text--link');
-      if (!links) return;
-
-      for (var i=0; i < links.length; i++) {
-        links[i].classList.remove('navigation__list__item-text--link--active');
-      }
-    }
-
-    function selectCurrentLink () {
-      removeCurrentLinkSelection();
-
-      var hash = window.location.hash;
-      if (!hash) return;
-
-      var link = document.querySelector("a[href='"+hash+"']");
-      if (!link) return;
-
-      link.classList.add('navigation__list__item-text--link--active');
-    }
-
-    function highlightCode () {
-      var blocks = document.querySelectorAll('.hljs code');
-
-      for(var i=0; i < blocks.length; i++) {
-        hljs.highlightBlock(blocks[i]);
-      }
-    }
-
-    window.addEventListener('hashchange', selectCurrentLink);
-    window.addEventListener('load', selectCurrentLink);
-    window.addEventListener('load', highlightCode);
-  </script>
 </body>
 </html>
